@@ -66,7 +66,8 @@ case "${1}" in
       evaluate_retval
 
       # Make all LVM volume groups unavailable, if appropriate
-      if [ -x /sbin/vgchange ]; then /sbin/vgchange -an > /dev/null; fi
+      # This fails if swap or / are on an LVM partition
+      #if [ -x /sbin/vgchange ]; then /sbin/vgchange -an > /dev/null; fi
       ;;
 
    *)
