@@ -32,7 +32,10 @@
 case "${1}" in
    start)
       # Make sure /run/var is available before logging any messages
-      mount -n /run || failed=1
+      if ! mountpoint /sys >/dev/null; then
+         mount -n /run || failed=1
+      fi
+
       mkdir -p /run/var /run/lock /run/shm
       chmod 1777 /run/shm
 
@@ -56,7 +59,7 @@ case "${1}" in
       # Copy devices that Udev >= 155 doesn't handle to /dev
       cp -a /lib/udev/devices/* /dev
 
-      ln -s /run/shm /dev/shm
+      ln -sfn /run/shm /dev/shm
       
       (exit ${failed})
       evaluate_retval
