@@ -82,8 +82,7 @@ rm man/man8/arpd.8</userinput></screen>
 
     <para>Install the package:</para>
 
-<screen><userinput remap="install">
-make DESTDIR=              \
+<screen><userinput remap="install">make DESTDIR=              \
      MANDIR=/usr/share/man \
      DOCDIR=/usr/share/doc/iproute2-&iproute2-version; install</userinput></screen>
 
