@@ -22,7 +22,7 @@
 <!ENTITY automake-md5 "036d79de6e443e02aec2be1df2b4f0ac">
 <!ENTITY automake-home "&gnu-software;automake/">
 <!ENTITY automake-ch6-du "28.8 MB">
-<!ENTITY automake-ch6-sbu "18.3 SBU">
+<!ENTITY automake-ch6-sbu "less than 0.1 SBU (without tests)">
 
 <!ENTITY bash-version "4.2">
 <!ENTITY bash-size "6,845 KB">
@@ -302,7 +302,7 @@
 <!ENTITY less-ch6-du "3.5 MB">
 <!ENTITY less-ch6-sbu "less than 0.1 SBU">
 
-<!ENTITY lfs-bootscripts-version "20120530">                 <!-- Scripts depend on this format -->
+<!ENTITY lfs-bootscripts-version "20120617">                 <!-- Scripts depend on this format -->
 <!ENTITY lfs-bootscripts-size "BOOTSCRIPTS-SIZE KB">         <!-- Updated in Makefile -->
 <!ENTITY lfs-bootscripts-url "&downloads-root;lfs-bootscripts-&lfs-bootscripts-version;.tar.bz2">
 <!ENTITY lfs-bootscripts-md5 "BOOTSCRIPTS-MD5SUM">           <!-- Updated in Makefile -->
